# TerminalFormatters

./: CHANGELOG.rst  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: termformatters-main-lint-and-test.yaml  termformatters-main-pre-release.yaml  termformatters-main-release-github-pypi.yaml  termformatters-main-release-test-pypi.yaml
src/: demo.py  test_termformatters.py
src/termformatters/: __init__.py  base.py
